correcting icons and alignments

--- a/css/styles.css
+++ b/css/styles.css
@@ -96,24 +96,28 @@ input#search {
 }
 
 .icon{
-    max-width: 25px;
-    width: 25px;
+   
+    width: 20px;
     height:25px;
+    margin-top: -5px;
     
 }
  .social-buttons a{
-    margin: 0 3% 0 3%;
+    margin: 0 2% 0 2%;
  }
 
 .view-info{
     flex-basis: 30%;
     display:flex;
+    color: gray;
+    font-size: 15px;
 }
 
 .social-buttons{
     flex-basis: 70%;
     display:flex;
     justify-content: flex-end;
+    align-items: center;
 }
 
 .avatar{
@@ -124,6 +128,7 @@ input#search {
 
 .user-info h3{
     display: inline-block;
+    margin-left: 5px;
 }
 button.subscribe {
     background-color: red;
@@ -140,6 +145,10 @@ button.subscribe {
 
 .video-description {
     margin-left: 35px;
+}
+.channel-info {
+    display: flex;
+    align-items: center;
 }
 
 /*================= PLAYLIST SECTION ===============*/
